# camera_calibration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: Core.h
core/interfaces/: Abstract_Estimator.h  Definitions.h  ICamera.h  IEdge.h  IGraph.h  IIntrinsics.h  INode.h  IScene.h  ITwo_View.h
core/scene/: Camera.h  Intrinsics.h  Scene.h  Two_View.h
core/utils/: DivisionModelFunctors.h  DivisionModelTriangulation.cpp  DivisionModelTriangulation.h  DivisionModelUtilities.h  Functors.h  Local_Parametrization_SO3.h  Local_Parametrization_Sphere.h  Scene_IO.h  Triangulation.h  Utilities.cpp  Utilities.h
pipeline/: create_points.sh
report/: report.tex
report/parts/: bundle_adjustment.tex  camera.tex  focal_length_estimator.tex  groebner_automatic_solver.tex  non_linear_optimizer.tex  refs.bib  results.tex
report/preambule/: preambule_oneside.tex
subroutines/: CMakeLists.txt
subroutines/distortion_groebner_estimator/: Groebner_Estimator.cpp  Groebner_Estimator.h  main_distortion_estimator.cpp
subroutines/non_linear_optimizer/: Non_Linear_Estimator.cpp  Non_Linear_Estimator.h  main_non_linear_optimizer.cpp
subroutines/tests/: CMakeLists.txt
subroutines/tests/test_core/: CMakeLists.txt  main.cpp  test_camera.cpp  test_intrinsics.cpp  test_so3_parametrization.cpp  test_sphere_parametrization.cpp
subroutines/tests/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.h
